/*
 * Copyright (c) 2013-2019 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
package eapli.base.taskmanagement.domain;

import eapli.base.collaboratormanagement.domain.Collaborator;
import eapli.framework.domain.model.AggregateRoot;
import eapli.framework.domain.model.DomainEntities;

import javax.persistence.*;

/**
 *
 * @author Pedro Santos 1190967@isep.ipp.pt
 */

@Entity
@Inheritance(strategy=InheritanceType.JOINED)
public abstract class Task implements AggregateRoot<Long> {

    @Version
    private Long version;

    @Id
    @GeneratedValue
    @Column(name = "taskID")
    private Long m_oID;

    @Embedded
    private TaskDescription m_oDescription;

    @Enumerated(EnumType.STRING)
    private TaskStatus m_oTaskStatus;

    @Enumerated(EnumType.STRING)
    private TaskPriority m_oTaskPriority;

    @Enumerated(EnumType.STRING)
    private TaskResult m_oTaskResult;

    /*@OneToOne
    @JoinColumn(name="TaskResponsible")
    private Collaborator m_oCollaborator;*/

    public Task(final TaskDescription oDescription, final TaskPriority oTaskPriority) {
        if (oDescription == null || oTaskPriority == null) {
            throw new IllegalArgumentException();
        }
        this.m_oDescription = oDescription;
        this.m_oTaskStatus = TaskStatus.PENDING;
        this.m_oTaskPriority = oTaskPriority;
        this.m_oTaskResult = TaskResult.NO_RESULT;
    }

    protected Task() {
        // for ORM only
    }

    public TaskDescription description() {
        return this.m_oDescription;
    }

    public TaskStatus status() {
        return this.m_oTaskStatus;
    }

    public TaskPriority priority() {
        return this.m_oTaskPriority;
    }

    public TaskResult result() {
        return this.m_oTaskResult;
    }

    /*public Collaborator collaborator() {
        return this.m_oCollaborator;
    }

    public void assignCollaborator(Collaborator oCollaborator) {
        this.m_oCollaborator = oCollaborator;
    }*/

    @Override
    public boolean equals(final Object o) {
        return DomainEntities.areEqual(this, o);
    }

    @Override
    public int hashCode() {
        return DomainEntities.hashCode(this);
    }

    @Override
    public boolean sameAs(final Object other) {
        return DomainEntities.areEqual(this, other);
    }

    public Long id() {
        return identity();
    }

    @Override
    public Long identity() {
        return this.m_oID;
    }
}
