package eapli.base.taskmanagement.domain;

/**
 * @author Tiago Costa 1191460@isep.ipp.pt
 */
public enum TaskFilterFields {
    PRIORITY, FINISHDATE, NONE;
}
